--- a/map.html
+++ b/map.html
@@ -12,6 +12,12 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
 
+	<!-- Mapbox -->
+	<script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js'></script>
+	<link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' />
+
+
+
 	<style>
 
 	</style>
@@ -19,15 +25,18 @@
 </head>
 
 <body>
-<div id="map" style="width: 1800px; height: 900px;"></div>
+	<button onclick="togglePoints();">toggle some data!</button>
+	<button onclick="addlayer()">Add Style Layer</button>
+	<button onclick="removelayer()">Remove Style Layer</button>
+	<div id="map" style="width: 1800px; height: 900px;"></div>
+
 
 <script src="test.js" type="text/javascript"></script>
 
 <script>
-
+	L.mapbox.accessToken = 'pk.eyJ1IjoicGV0ZXJzaGVuIiwiYSI6ImNrbTFhaXMyZTB2M2gycHBmaHU2bmR6ajQifQ.EEUPleBNyQJqb9nz4dcbQA';
 	var map = L.map('map').setView([51.0447, -114.0719], 14);
-
-	L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
+	L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoicGV0ZXJzaGVuIiwiYSI6ImNrbTFhaXMyZTB2M2gycHBmaHU2bmR6ajQifQ.EEUPleBNyQJqb9nz4dcbQA', {
 		maxZoom: 18,
 		minZoom: 12,
 		attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, ' +
@@ -36,6 +45,28 @@
 		tileSize: 512,
 		zoomOffset: -1
 	}).addTo(map);
+
+	// L.mapbox.styleLayer('mapbox://styles/petershen/ckm40z28d11we17ljhfjyxx90').addTo(map);
+
+
+	function addlayer(){
+		L.mapbox.accessToken = 'pk.eyJ1IjoicGV0ZXJzaGVuIiwiYSI6ImNrbTFhaXMyZTB2M2gycHBmaHU2bmR6ajQifQ.EEUPleBNyQJqb9nz4dcbQA';
+		L.mapbox.styleLayer('mapbox://styles/petershen/ckm40z28d11we17ljhfjyxx90').addTo(map);
+	}
+
+
+	function removelayer(){
+		L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoicGV0ZXJzaGVuIiwiYSI6ImNrbTFhaXMyZTB2M2gycHBmaHU2bmR6ajQifQ.EEUPleBNyQJqb9nz4dcbQA', {
+			maxZoom: 18,
+			minZoom: 12,
+			attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, ' +
+				'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+			id: 'mapbox/streets-v11',
+			tileSize: 512,
+			zoomOffset: -1
+		}).addTo(map);
+	}
+
 
 
 	function onEachFeature(feature, layer) {
@@ -69,10 +100,11 @@
 
 
 
+
 </script>
 
 
 <br>
-<a href="file:///C:/Users/peter/OneDrive/%E6%A1%8C%E9%9D%A2/ENGO551/lab2/551_Lab2/index.html">back to search page<br></a>
+<a href="file:///C:\Users\peter\OneDrive\桌面\ENGO551\551Lab3\551Lab3\ENGO551-Lab2-main\index.html">back to search page<br></a>
 </body>
 </html>
